--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,18 @@
 [package]
-name = "usdc-indexer"
+name = "solana-usdc-indexer"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-client = "1.18"
-solana-sdk = "1.18"
-solana-transaction-status = "1.18"
-tokio = { version = "1.0", features = ["full"] }
+solana-client = "2.0.7"
+solana-sdk = "2.0.7"
+spl-token = { version = "5.0.0", features = ["no-entrypoint"] }
+chrono = "0.4.38"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-chrono = { version = "0.4", features = ["serde"] }
-warp = "0.3"
-askama = "0.12"
-anyhow = "1.0"
-reqwest = "0.11"
+actix-web = "4.9.0"
+tokio = { version = "1.40", features = ["full"] }
+env_logger = "0.11.5"
+log = "0.4.22"
+
+[dependencies.base64ct]
+version = "1.6.0"  # Pin to a version compatible with Rust 1.80
