--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ solana-sdk = "2.0.7"
 spl-token = { version = "5.0.0", features = ["no-entrypoint"] }
 chrono = "0.4.38"
 serde = { version = "1.0", features = ["derive"] }
-actix-web =四大.9.0"
+actix-web ="4.9.0"
 tokio = { version = "1.40", features = ["full"] }
 env_logger = "0.11.5"
 log = "0.4.22"
