--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ solana-sdk = "2.0.7"
 spl-token = { version = "5.0.0", features = ["no-entrypoint"] }
 chrono = "0.4.38"
 serde = { version = "1.0", features = ["derive"] }
-actix-web ="4.9.0"
+actix-web = "4.9.0"
 tokio = { version = "1.40", features = ["full"] }
 env_logger = "0.11.5"
 log = "0.4.22"
@@ -18,6 +18,6 @@ log = "0.4.22"
 [dependencies.base64ct]
 version = "1.6.0"
 
-# Patch to override base64ct for all dependencies
+# Patch to override base64ct for all dependencies, specifying exact version
 [patch.crates-io]
-base64ct = { version = "1.6.0" }
+base64ct = { version = "=1.6.0" }  # Use exact version to resolve ambiguity
