--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-client = "2.0.7"
-solana-sdk = "2.0.7"
-spl-token = { version = "5.0.0", features = ["no-entrypoint"] }
+solana-client = "1.18.26"  # Downgraded to avoid base64ct 1.8.0
+solana-sdk = "1.18.26"
+spl-token = { version = "4.0.0", features = ["no-entrypoint"] }  # Matching version
 chrono = "0.4.38"
 serde = { version = "1.0", features = ["derive"] }
 actix-web = "4.9.0"
 tokio = { version = "1.40", features = ["full"] }
 env_logger = "0.11.5"
 log = "0.4.22"
-
-# Explicitly pin base64ct to a compatible version
-[dependencies.base64ct]
-version = "1.6.0"
