--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-client = "1.18.26"  # Downgraded to avoid base64ct 1.8.0
-solana-sdk = "1.18.26"
-spl-token = { version = "4.0.0", features = ["no-entrypoint"] }  # Matching version
+solana-client = "2.0.7"
+solana-sdk = "2.0.7"
+spl-token = { version = "5.0.0", features = ["no-entrypoint"] }
 chrono = "0.4.38"
 serde = { version = "1.0", features = ["derive"] }
 actix-web = "4.9.0"
