--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-client = "1.18.26"  # Downgraded for compatibility
-solana-sdk = "1.18.26"
-spl-token = { version = "4.0.0", features = ["no-entrypoint"] }  # Downgraded
-chrono = { version = "0.4.38", features = ["serde"] }  # Added serde feature
+solana-client = "2.0.7"
+solana-sdk = "2.0.7"
+solana-transaction-status = "2.0.7"
+spl-token = { version = "5.0.0", features = ["no-entrypoint"] }
+chrono = { version = "0.4.38", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 actix-web = "4.9.0"
 tokio = { version = "1.40", features = ["full"] }
